--- a/Changes
+++ b/Changes
@@ -2,25 +2,14 @@ Revision history for Perl extension HTML::Tidy5.
 
 The HTML::Tidy5 module is an HTML5-compatible upgrade from the HTML::Tidy module.
 
-
-0.03    Fri Mar 16 09:23:21 CDT 2018
+1.00    Tue Mar 20 16:51:52 CDT 2018
 ====================================
-3rd beta.  More test fixes.
+First production release.  HTML::Tidy5 relies on version 5.6.0 of the
+tidy-html5 library.  See http://html-tidy.org/ for information about
+the tidy-html5 library.
 
-
-0.02    Thu Mar 15 12:23:02 CDT 2018
-====================================
-2nd beta.  Cleaned up messaging a bit.
-
-
-0.01    Wed Mar 14 11:21:38 CDT 2018
-====================================
-Uses latest tidy-html5.  No longer needs tidyp.  Requires Perl 5.10.1.
-
-This is the first beta release.  It has not been tested by anyone out in the world.
-
-[ENHANCEMENTS]
-The tidy-html5 library validates HTML5.
 
 [INCOMPATIBILITIES WITH HTML::Tidy]
-Removed the overloading of HTML::Tidy::Message objects.  Now you have to explicitly call ->as_string.
+In HTML::Tidy, HTML::Tidy::Message objects had overloaded string context.
+In HTML::Tidy5, you must explicitly call the ->as_string method for
+HTML::Tidy5::Message.
